made some changes

--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
               <button class="btn btn-primary">Explore Solutions</button>
             </div>
 
-            <div class="hero-banner"></div>
+            <div class="hero-banner">
+              <img
+                src="./assets/images/3.png"
+                alt="AI shape"
+                class="shape-content"
+              />
+            </div>
           </div>
-
-          <img
-            src="./assets/images/3.png"
-            alt="AI shape"
-            class="shape-content"
-          />
         </section>
 
         <!-- 
